--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "dynaprizes-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "description": "Waitlist backend for Dynaprizes Store",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-     "build": "echo 'Building...'"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7",
-    "express-rate-limit": "^6.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "dotenv": "^16.3.1"
   }
 }
